k8s/bankapp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankapp
  namespace: bankapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bankapp
  template:
    metadata:
      labels:
        app: bankapp
    spec:
      containers:
        - name: bankapp
          image: dhruvprajapaticode/bankapp
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
