k8s/ollama-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: bankapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      containers:
        - name: ollama
          image: ollama/ollama:latest
          ports:
            - containerPort: 11434
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "1.5Gi"
              cpu: "1000m"
          volumeMounts:
            - mountPath: /root/.ollama
              name: ollama-mount
              
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - |
                    until ollama list > /dev/null 2>&1; do
                      echo "waiting for ollama service to start" >> /tmp/poststart.log
                      sleep 2
                    done

                    if ! ollama list | grep -q tinyllama
                    then
                      echo "pulling tinyllama" >> /tmp/poststart.log
                      ollama pull tinyllama
                    else
                      echo "already installed in pv" >> /tmp/poststart.log
                    fi
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - |
                  ollama list | grep -q tinyllama
            initialDelaySeconds: 15
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /
              port: 11434
            initialDelaySeconds: 15
            periodSeconds: 3
            failureThreshold: 10        
      volumes:
        - name: ollama-mount
          persistentVolumeClaim:
            claimName: ollama-claim
