k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: bankapp
spec:
  selector:
    app: mysql
  ports:
    - port: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
  namespace: bankapp
spec:
  selector:
    app: ollama
  ports:
    - port: 11434

---
apiVersion: v1
kind: Service
metadata:
  name: bank-service
  namespace: bankapp
spec:
  type: NodePort
  selector:
    app: bankapp
  ports:
    - port: 8080
      nodePort: 30800
      targetPort: 8080
